fixes flex box aligning left

--- a/scss/style.scss
+++ b/scss/style.scss
@@ -22,6 +22,7 @@ body {
     align-items: center;
     justify-content: center;
     min-width: 700px;
+    display: flex;
 }
 
 #startContainer {
@@ -64,6 +65,7 @@ body {
     flex-direction: column;
     padding: 20px;
     display: none;
+    max-width: 650px;
 }
 #about {
 color: #FF504F;
@@ -89,6 +91,7 @@ color: #FF504F;
     padding: 30px;
     max-width: 900px;
     display: none;
+    margin: 0px;
 }
 input {
     font-family: 'Purple Purse', cursive;
@@ -150,6 +153,7 @@ container {
     padding: 30px;
     max-width: 850px;
     display: none;
+    margin: 0px;
     h5 {
         text-align: center;
     }
